--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: storage/test.sqlite3
 
 production:
-  <<: *default
-  database: storage/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: learning-to-db
+  username: postgres
+  password: eHzT9tg7YfpIwV1
+  host: learning-to-db.internal
+  port: 5432
+  pool: 10
