--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ console_command = '/rails/bin/rails console'
 [build]
 
 [deploy]
-  release_command = "sh /release.sh"
+  release_command = "./bin/rails db:prepare"
 
 [http_service]
   internal_port = 3000
